// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformPicker render() should only render Mobile platforms under Mobile tab 1`] = `
<Fragment>
  <NavContainer>
    <CategoryNav>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="popular"
        onClick={[Function]}
        to=""
      >
        Popular
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="browser"
        onClick={[Function]}
        to=""
      >
        Browser
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="server"
        onClick={[Function]}
        to=""
      >
        Server
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="mobile"
        onClick={[Function]}
        to=""
      >
        Mobile
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="desktop"
        onClick={[Function]}
        to=""
      >
        Desktop
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="all"
        onClick={[Function]}
        to=""
      >
        All
      </ListLink>
    </CategoryNav>
    <SearchBar>
      <InlineSvg
        src="icon-search"
      />
      <input
        label="Filter Platforms"
        onChange={[Function]}
        placeholder="Filter Platforms"
        type="text"
        value=""
      />
    </SearchBar>
  </NavContainer>
  <PlatformList>
    <PlatformCard
      data-test-id="platform-cordova"
      key="cordova"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "cordova",
          "language": "cordova",
          "link": "https://docs.getsentry.com/hosted/clients/cordova/",
          "name": "Cordova",
          "type": "language",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-java-android"
      key="java-android"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "java-android",
          "language": "java",
          "link": "https://docs.getsentry.com/hosted/clients/java/modules/android/",
          "name": "Android",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-objc"
      key="objc"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "objc",
          "language": "objc",
          "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
          "name": "Objective-C",
          "type": "language",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-cocoa"
      key="cocoa"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "cocoa",
          "language": "cocoa",
          "link": "https://docs.getsentry.com/hosted/clients/react-native/",
          "name": "React-Native",
          "type": "language",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-swift"
      key="swift"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "swift",
          "language": "swift",
          "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
          "name": "Swift",
          "type": "language",
        }
      }
      selected={false}
    />
  </PlatformList>
</Fragment>
`;

exports[`PlatformPicker render() should render renderPlatformList with Python when filtered with py 1`] = `
<Fragment>
  <NavContainer>
    <CategoryNav>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="popular"
        onClick={[Function]}
        to=""
      >
        Popular
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="browser"
        onClick={[Function]}
        to=""
      >
        Browser
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="server"
        onClick={[Function]}
        to=""
      >
        Server
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="mobile"
        onClick={[Function]}
        to=""
      >
        Mobile
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="desktop"
        onClick={[Function]}
        to=""
      >
        Desktop
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="all"
        onClick={[Function]}
        to=""
      >
        All
      </ListLink>
    </CategoryNav>
    <SearchBar>
      <InlineSvg
        src="icon-search"
      />
      <input
        label="Filter Platforms"
        onChange={[Function]}
        placeholder="Filter Platforms"
        type="text"
        value="py"
      />
    </SearchBar>
  </NavContainer>
  <PlatformList>
    <PlatformCard
      data-test-id="platform-python-bottle"
      key="python-bottle"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-bottle",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/bottle/",
          "name": "Bottle",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-celery"
      key="python-celery"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-celery",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/celery/",
          "name": "Celery",
          "type": "library",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-django"
      key="python-django"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-django",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/django/",
          "name": "Django",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-flask"
      key="python-flask"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-flask",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/flask/",
          "name": "Flask",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-pylons"
      key="python-pylons"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-pylons",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pylons/",
          "name": "Pylons",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-pyramid"
      key="python-pyramid"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-pyramid",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pyramid/",
          "name": "Pyramid",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python"
      key="python"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/",
          "name": "Python",
          "type": "language",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-rq"
      key="python-rq"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-rq",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/rq/",
          "name": "RQ",
          "type": "framework",
        }
      }
      selected={false}
    />
    <PlatformCard
      data-test-id="platform-python-tornado"
      key="python-tornado"
      onClear={[Function]}
      onClick={[Function]}
      platform={
        Object {
          "id": "python-tornado",
          "language": "python",
          "link": "https://docs.getsentry.com/hosted/clients/python/integrations/tornado/",
          "name": "Tornado",
          "type": "framework",
        }
      }
      selected={false}
    />
  </PlatformList>
</Fragment>
`;

exports[`PlatformPicker render() should render renderPlatformList with community SDKs message if platform not found 1`] = `
<Fragment>
  <NavContainer>
    <CategoryNav>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="popular"
        onClick={[Function]}
        to=""
      >
        Popular
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="browser"
        onClick={[Function]}
        to=""
      >
        Browser
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="server"
        onClick={[Function]}
        to=""
      >
        Server
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="mobile"
        onClick={[Function]}
        to=""
      >
        Mobile
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="desktop"
        onClick={[Function]}
        to=""
      >
        Desktop
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="all"
        onClick={[Function]}
        to=""
      >
        All
      </ListLink>
    </CategoryNav>
    <SearchBar>
      <InlineSvg
        src="icon-search"
      />
      <input
        label="Filter Platforms"
        onChange={[Function]}
        placeholder="Filter Platforms"
        type="text"
        value="aaaaaa"
      />
    </SearchBar>
  </NavContainer>
  <PlatformList />
  <EmptyMessage
    icon="icon-project"
    title="We don't have an SDK for that yet!"
  >
    <span
      key="5"
    >
      <span
        key="0"
      >
        Not finding your platform? You can still create your project,
              but looks like we don't have an official SDK for your platform
              yet. However, there's a rich ecosystem of community supported
              SDKs (including Perl, CFML, Clojure, and ActionScript). Try
              
      </span>
      <ExternalLink
        href="https://github.com/search?q=-org%3Agetsentry+topic%3Asentry&type=Repositories"
        key="2"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span
          key="1"
        >
          searching for Sentry clients
        </span>
      </ExternalLink>
      <span
        key="3"
      >
         or contacting support.
      </span>
    </span>
  </EmptyMessage>
</Fragment>
`;

exports[`PlatformPicker render() should update State.tab onClick when particular tab is clicked 1`] = `
<PlatformPicker
  location={
    Object {
      "query": Object {},
    }
  }
  platform=""
  setPlatform={[Function]}
  showOther={true}
>
  <NavContainer>
    <div
      className="css-xl0stt-NavContainer ewlrg790"
    >
      <CategoryNav>
        <NavTabs
          className="css-5tazcq-CategoryNav ewlrg792"
        >
          <ul
            className="nav nav-tabs css-5tazcq-CategoryNav ewlrg792"
          >
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="popular"
              onClick={[Function]}
              to=""
            >
              <li
                className=""
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Popular
                  </a>
                </Link>
              </li>
            </ListLink>
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="browser"
              onClick={[Function]}
              to=""
            >
              <li
                className=""
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Browser
                  </a>
                </Link>
              </li>
            </ListLink>
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="server"
              onClick={[Function]}
              to=""
            >
              <li
                className=""
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Server
                  </a>
                </Link>
              </li>
            </ListLink>
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="mobile"
              onClick={[Function]}
              to=""
            >
              <li
                className=""
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Mobile
                  </a>
                </Link>
              </li>
            </ListLink>
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="desktop"
              onClick={[Function]}
              to=""
            >
              <li
                className=""
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Desktop
                  </a>
                </Link>
              </li>
            </ListLink>
            <ListLink
              activeClassName="active"
              index={false}
              isActive={[Function]}
              key="all"
              onClick={[Function]}
              to=""
            >
              <li
                className="active"
              >
                <Link
                  onClick={[Function]}
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to=""
                >
                  <a
                    onClick={[Function]}
                    style={Object {}}
                  >
                    All
                  </a>
                </Link>
              </li>
            </ListLink>
          </ul>
        </NavTabs>
      </CategoryNav>
      <SearchBar>
        <div
          className="css-1e5tau1-SearchBar-inputStyles ewlrg791"
        >
          <InlineSvg
            src="icon-search"
          >
            <StyledSvg
              height="1em"
              viewBox={Object {}}
              width="1em"
            >
              <svg
                className="css-ryh69w-StyledSvg e2idor0"
                height="1em"
                viewBox={Object {}}
                width="1em"
              >
                <use
                  href="#test"
                  xlinkHref="#test"
                />
              </svg>
            </StyledSvg>
          </InlineSvg>
          <input
            label="Filter Platforms"
            onChange={[Function]}
            placeholder="Filter Platforms"
            type="text"
            value=""
          />
        </div>
      </SearchBar>
    </div>
  </NavContainer>
  <PlatformList>
    <div
      className="css-545rh6-PlatformList ewlrg793"
    >
      <PlatformCard
        data-test-id="platform-csharp"
        key="csharp"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "csharp",
            "language": "csharp",
            "link": "https://docs.getsentry.com/hosted/clients/csharp/",
            "name": "C#",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-csharp"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "csharp",
              "language": "csharp",
              "link": "https://docs.getsentry.com/hosted/clients/csharp/",
              "name": "C#",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-csharp"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="csharp"
            >
              <div
                className="css-tzg8rc-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              C#
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-cordova"
        key="cordova"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "cordova",
            "language": "cordova",
            "link": "https://docs.getsentry.com/hosted/clients/cordova/",
            "name": "Cordova",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-cordova"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "cordova",
              "language": "cordova",
              "link": "https://docs.getsentry.com/hosted/clients/cordova/",
              "name": "Cordova",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-cordova"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="cordova"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Cordova
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-electron"
        key="electron"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "electron",
            "language": "electron",
            "link": "https://docs.getsentry.com/hosted/clients/electron/",
            "name": "Electron",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-electron"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "electron",
              "language": "electron",
              "link": "https://docs.getsentry.com/hosted/clients/electron/",
              "name": "Electron",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-electron"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="electron"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Electron
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-elixir"
        key="elixir"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "elixir",
            "language": "elixir",
            "link": "https://docs.getsentry.com/hosted/clients/elixir/",
            "name": "Elixir",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-elixir"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "elixir",
              "language": "elixir",
              "link": "https://docs.getsentry.com/hosted/clients/elixir/",
              "name": "Elixir",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-elixir"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="elixir"
            >
              <div
                className="css-1mdonx9-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Elixir
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-go"
        key="go"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "go",
            "language": "go",
            "link": "https://docs.getsentry.com/hosted/clients/go/",
            "name": "Go",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-go"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "go",
              "language": "go",
              "link": "https://docs.getsentry.com/hosted/clients/go/",
              "name": "Go",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-go"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="go"
            >
              <div
                className="css-ks66kg-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Go
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-go-http"
        key="go-http"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "go-http",
            "language": "go",
            "link": null,
            "name": "net/http",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-go-http"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "go-http",
              "language": "go",
              "link": null,
              "name": "net/http",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-go-http"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="go-http"
            >
              <div
                className="css-ks66kg-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              net/http
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-android"
        key="java-android"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-android",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/android/",
            "name": "Android",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-android"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-android",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/android/",
              "name": "Android",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-android"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-android"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Android
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-appengine"
        key="java-appengine"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-appengine",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/appengine/",
            "name": "Google App Engine",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-appengine"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-appengine",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/appengine/",
              "name": "Google App Engine",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-appengine"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-appengine"
            >
              <div
                className="css-1s03x3z-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Google App Engine
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java"
        key="java"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/",
            "name": "Java",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/",
              "name": "Java",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Java
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-log4j"
        key="java-log4j"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-log4j",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/log4j/",
            "name": "Log4j 1.x",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-log4j"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-log4j",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/log4j/",
              "name": "Log4j 1.x",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-log4j"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-log4j"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Log4j 1.x
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-log4j2"
        key="java-log4j2"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-log4j2",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/log4j2/",
            "name": "Log4j 2.x",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-log4j2"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-log4j2",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/log4j2/",
              "name": "Log4j 2.x",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-log4j2"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-log4j2"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Log4j 2.x
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-logback"
        key="java-logback"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-logback",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/logback/",
            "name": "Logback",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-logback"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-logback",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/logback/",
              "name": "Logback",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-logback"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-logback"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Logback
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-java-logging"
        key="java-logging"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "java-logging",
            "language": "java",
            "link": "https://docs.getsentry.com/hosted/clients/java/modules/jul/",
            "name": "java.util.logging",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-java-logging"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "java-logging",
              "language": "java",
              "link": "https://docs.getsentry.com/hosted/clients/java/modules/jul/",
              "name": "java.util.logging",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-java-logging"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="java-logging"
            >
              <div
                className="css-lc48x8-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              java.util.logging
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-angular"
        key="javascript-angular"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-angular",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/angular/",
            "name": "Angular",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-angular"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-angular",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/angular/",
              "name": "Angular",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-angular"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-angular"
            >
              <div
                className="css-b15x81-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Angular
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-angularjs"
        key="javascript-angularjs"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-angularjs",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/angularjs/",
            "name": "AngularJS",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-angularjs"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-angularjs",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/angularjs/",
              "name": "AngularJS",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-angularjs"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-angularjs"
            >
              <div
                className="css-6586kg-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              AngularJS
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-backbone"
        key="javascript-backbone"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-backbone",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/backbone/",
            "name": "Backbone",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-backbone"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-backbone",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/backbone/",
              "name": "Backbone",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-backbone"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-backbone"
            >
              <div
                className="css-105qz5e-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Backbone
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-ember"
        key="javascript-ember"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-ember",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/ember/",
            "name": "Ember",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-ember"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-ember",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/ember/",
              "name": "Ember",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-ember"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-ember"
            >
              <div
                className="css-1bbhz2-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Ember
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript"
        key="javascript"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/install/",
            "name": "JavaScript",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/install/",
              "name": "JavaScript",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript"
            >
              <div
                className="css-105qz5e-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              JavaScript
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-react"
        key="javascript-react"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-react",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/react/",
            "name": "React",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-react"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-react",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/react/",
              "name": "React",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-react"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-react"
            >
              <div
                className="css-fosd7h-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              React
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-javascript-vue"
        key="javascript-vue"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "javascript-vue",
            "language": "javascript",
            "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/vue/",
            "name": "Vue",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-javascript-vue"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "javascript-vue",
              "language": "javascript",
              "link": "https://docs.getsentry.com/hosted/clients/javascript/integrations/vue/",
              "name": "Vue",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-javascript-vue"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="javascript-vue"
            >
              <div
                className="css-105qz5e-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Vue
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-minidump"
        key="minidump"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "minidump",
            "language": "minidump",
            "link": "https://docs.getsentry.com/hosted/clients/minidump/",
            "name": "Minidump",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-minidump"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "minidump",
              "language": "minidump",
              "link": "https://docs.getsentry.com/hosted/clients/minidump/",
              "name": "Minidump",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-minidump"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="minidump"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Minidump
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-node-connect"
        key="node-connect"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "node-connect",
            "language": "node",
            "link": "https://docs.getsentry.com/hosted/clients/node/integrations/connect/",
            "name": "Connect",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-node-connect"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "node-connect",
              "language": "node",
              "link": "https://docs.getsentry.com/hosted/clients/node/integrations/connect/",
              "name": "Connect",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-node-connect"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="node-connect"
            >
              <div
                className="css-1wbn021-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Connect
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-node-express"
        key="node-express"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "node-express",
            "language": "node",
            "link": "https://docs.getsentry.com/hosted/clients/node/integrations/express/",
            "name": "Express",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-node-express"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "node-express",
              "language": "node",
              "link": "https://docs.getsentry.com/hosted/clients/node/integrations/express/",
              "name": "Express",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-node-express"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="node-express"
            >
              <div
                className="css-1wbn021-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Express
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-node-koa"
        key="node-koa"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "node-koa",
            "language": "node",
            "link": "https://docs.getsentry.com/hosted/clients/node/integrations/koa/",
            "name": "Koa",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-node-koa"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "node-koa",
              "language": "node",
              "link": "https://docs.getsentry.com/hosted/clients/node/integrations/koa/",
              "name": "Koa",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-node-koa"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="node-koa"
            >
              <div
                className="css-1wbn021-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Koa
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-node"
        key="node"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "node",
            "language": "node",
            "link": "https://docs.getsentry.com/hosted/clients/node/",
            "name": "Node.js",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-node"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "node",
              "language": "node",
              "link": "https://docs.getsentry.com/hosted/clients/node/",
              "name": "Node.js",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-node"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="node"
            >
              <div
                className="css-1wbn021-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Node.js
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-objc"
        key="objc"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "objc",
            "language": "objc",
            "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
            "name": "Objective-C",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-objc"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "objc",
              "language": "objc",
              "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
              "name": "Objective-C",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-objc"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="objc"
            >
              <div
                className="css-1e8vskw-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Objective-C
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-php-laravel"
        key="php-laravel"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "php-laravel",
            "language": "php",
            "link": "https://docs.getsentry.com/hosted/clients/php/integrations/laravel/",
            "name": "Laravel",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-php-laravel"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "php-laravel",
              "language": "php",
              "link": "https://docs.getsentry.com/hosted/clients/php/integrations/laravel/",
              "name": "Laravel",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-php-laravel"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="php-laravel"
            >
              <div
                className="css-jzifau-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Laravel
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-php-monolog"
        key="php-monolog"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "php-monolog",
            "language": "php",
            "link": "https://docs.getsentry.com/hosted/clients/php/integrations/monolog/",
            "name": "Monolog",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-php-monolog"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "php-monolog",
              "language": "php",
              "link": "https://docs.getsentry.com/hosted/clients/php/integrations/monolog/",
              "name": "Monolog",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-php-monolog"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="php-monolog"
            >
              <div
                className="css-f6lc5m-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Monolog
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-php"
        key="php"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "php",
            "language": "php",
            "link": "https://docs.getsentry.com/hosted/clients/php/",
            "name": "PHP",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-php"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "php",
              "language": "php",
              "link": "https://docs.getsentry.com/hosted/clients/php/",
              "name": "PHP",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-php"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="php"
            >
              <div
                className="css-f6lc5m-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              PHP
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-php-symfony2"
        key="php-symfony2"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "php-symfony2",
            "language": "php",
            "link": "https://docs.getsentry.com/hosted/clients/php/integrations/symfony2/",
            "name": "Symfony2",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-php-symfony2"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "php-symfony2",
              "language": "php",
              "link": "https://docs.getsentry.com/hosted/clients/php/integrations/symfony2/",
              "name": "Symfony2",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-php-symfony2"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="php-symfony2"
            >
              <div
                className="css-f6lc5m-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Symfony2
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-bottle"
        key="python-bottle"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-bottle",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/bottle/",
            "name": "Bottle",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-bottle"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-bottle",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/bottle/",
              "name": "Bottle",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-bottle"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-bottle"
            >
              <div
                className="css-jprxon-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Bottle
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-celery"
        key="python-celery"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-celery",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/celery/",
            "name": "Celery",
            "type": "library",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-celery"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-celery",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/celery/",
              "name": "Celery",
              "type": "library",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-celery"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-celery"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Celery
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-django"
        key="python-django"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-django",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/django/",
            "name": "Django",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-django"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-django",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/django/",
              "name": "Django",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-django"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-django"
            >
              <div
                className="css-13uplim-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Django
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-flask"
        key="python-flask"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-flask",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/flask/",
            "name": "Flask",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-flask"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-flask",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/flask/",
              "name": "Flask",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-flask"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-flask"
            >
              <div
                className="css-1lbt1li-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Flask
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-pylons"
        key="python-pylons"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-pylons",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pylons/",
            "name": "Pylons",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-pylons"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-pylons",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pylons/",
              "name": "Pylons",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-pylons"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-pylons"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Pylons
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-pyramid"
        key="python-pyramid"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-pyramid",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pyramid/",
            "name": "Pyramid",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-pyramid"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-pyramid",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/pyramid/",
              "name": "Pyramid",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-pyramid"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-pyramid"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Pyramid
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python"
        key="python"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/",
            "name": "Python",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/",
              "name": "Python",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Python
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-rq"
        key="python-rq"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-rq",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/rq/",
            "name": "RQ",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-rq"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-rq",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/rq/",
              "name": "RQ",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-rq"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-rq"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              RQ
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-python-tornado"
        key="python-tornado"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "python-tornado",
            "language": "python",
            "link": "https://docs.getsentry.com/hosted/clients/python/integrations/tornado/",
            "name": "Tornado",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-python-tornado"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "python-tornado",
              "language": "python",
              "link": "https://docs.getsentry.com/hosted/clients/python/integrations/tornado/",
              "name": "Tornado",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-python-tornado"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="python-tornado"
            >
              <div
                className="css-1vvuenp-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Tornado
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-cocoa"
        key="cocoa"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "cocoa",
            "language": "cocoa",
            "link": "https://docs.getsentry.com/hosted/clients/react-native/",
            "name": "React-Native",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-cocoa"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "cocoa",
              "language": "cocoa",
              "link": "https://docs.getsentry.com/hosted/clients/react-native/",
              "name": "React-Native",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-cocoa"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="cocoa"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              React-Native
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-ruby-rack"
        key="ruby-rack"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "ruby-rack",
            "language": "ruby",
            "link": "https://docs.getsentry.com/hosted/clients/ruby/integrations/rack/",
            "name": "Rack",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-ruby-rack"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "ruby-rack",
              "language": "ruby",
              "link": "https://docs.getsentry.com/hosted/clients/ruby/integrations/rack/",
              "name": "Rack",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-ruby-rack"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="ruby-rack"
            >
              <div
                className="css-ze44n6-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Rack
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-ruby-rails"
        key="ruby-rails"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "ruby-rails",
            "language": "ruby",
            "link": "https://docs.getsentry.com/hosted/clients/ruby/integrations/rails/",
            "name": "Rails",
            "type": "framework",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-ruby-rails"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "ruby-rails",
              "language": "ruby",
              "link": "https://docs.getsentry.com/hosted/clients/ruby/integrations/rails/",
              "name": "Rails",
              "type": "framework",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-ruby-rails"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="ruby-rails"
            >
              <div
                className="css-15nw1ir-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Rails
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-ruby"
        key="ruby"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "ruby",
            "language": "ruby",
            "link": "https://docs.getsentry.com/hosted/clients/ruby/",
            "name": "Ruby",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-ruby"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "ruby",
              "language": "ruby",
              "link": "https://docs.getsentry.com/hosted/clients/ruby/",
              "name": "Ruby",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-ruby"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="ruby"
            >
              <div
                className="css-ze44n6-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Ruby
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-rust"
        key="rust"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "rust",
            "language": "rust",
            "link": "https://docs.getsentry.com/hosted/clients/rust/",
            "name": "Rust",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-rust"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "rust",
              "language": "rust",
              "link": "https://docs.getsentry.com/hosted/clients/rust/",
              "name": "Rust",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-rust"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="rust"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Rust
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-swift"
        key="swift"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "swift",
            "language": "swift",
            "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
            "name": "Swift",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-swift"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "swift",
              "language": "swift",
              "link": "https://docs.getsentry.com/hosted/clients/cocoa/",
              "name": "Swift",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-swift"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="swift"
            >
              <div
                className="css-1e8vskw-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Swift
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-mock"
        key="mock"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "mock",
            "language": "mock",
            "link": "",
            "name": "Mock Integration",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-mock"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "mock",
              "language": "mock",
              "link": "",
              "name": "Mock Integration",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-mock"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="mock"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Mock Integration
            </h3>
          </div>
        </Component>
      </PlatformCard>
      <PlatformCard
        data-test-id="platform-other"
        key="other"
        onClear={[Function]}
        onClick={[Function]}
        platform={
          Object {
            "id": "other",
            "language": "other",
            "link": "https://docs.getsentry.com/hosted/clients/",
            "name": "Other",
            "type": "language",
          }
        }
        selected={false}
      >
        <Component
          className="css-16kw2fg-PlatformCard ewlrg796"
          data-test-id="platform-other"
          onClear={[Function]}
          onClick={[Function]}
          platform={
            Object {
              "id": "other",
              "language": "other",
              "link": "https://docs.getsentry.com/hosted/clients/",
              "name": "Other",
              "type": "language",
            }
          }
          selected={false}
        >
          <div
            className="css-16kw2fg-PlatformCard ewlrg796"
            data-test-id="platform-other"
            onClick={[Function]}
          >
            <StyledPlatformiconTile
              platform="other"
            >
              <div
                className="css-yhb6wb-PlatformiconTile-getColorStyles-StyledPlatformiconTile ewlrg794"
              />
            </StyledPlatformiconTile>
            <h3>
              Other
            </h3>
          </div>
        </Component>
      </PlatformCard>
    </div>
  </PlatformList>
</PlatformPicker>
`;
